[gd_scene load_steps=6 format=2]

[ext_resource path="res://shaders/ball.tres" type="Material" id=1]
[ext_resource path="res://scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://scenes/editor/GizmoHolder.tscn" type="PackedScene" id=3]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="SphereShape" id=2]
resource_local_to_scene = true
margin = 0.0001
radius = 0.01

[node name="Ball" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
material_override = ExtResource( 1 )
mesh = SubResource( 1 )
material/0 = null

[node name="Area" type="Area" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 2 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="GizmoHolder" parent="." instance=ExtResource( 3 )]

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
